# tgtts-qwen3

./: .dockerignore  .gitignore  Dockerfile  README.md  analyse_logs.py  control.py  docker-compose.yml  generate_tts_stats_dashboard.py  haproxy.cfg  letter_mapping.json  pyproject.toml  sfx_mapping.json  test_qwen3.py  test_qwen3_linux.py  tg_tts_service.py  tg_tts_service_blips_new.py  tg_tts_service_radio.py  tg_tts_service_radio_gibberish.py  tts-api.py  tts_dashboard.py  visualisations.js  voice_mapping.json
speaker_latents/: hifi_captain_man.speaker_latent  hifi_captain_woman.speaker_latent
static/: visualisations.js
