[project]
name = "tgtts-qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blake3>=1.0.8",
    "faster-qwen3-tts>=0.2.4",
    "flask>=3.1.3",
    "lavasr",
    "pydub>=0.25.1",
    "pysbd>=0.3.4",
    "stftpitchshift>=2.0",
]

[tool.uv.sources]
lavasr = { git = "https://github.com/ysharma3501/LavaSR.git" }
